[tool.poetry]
name = "week2-ungraded-lab"
version = "0.1.0"
description = ""
authors = ["Baptiste Pasquier <pasquierbaptiste@hotmail.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.26.3"
pandas = "^2.1.4"
seaborn = "^0.13.1"
tensorflow = { version = "2.15.0", extras = ["and-cuda"] }
matplotlib = "^3.8.2"
scipy = "^1.11.4"
tensorrt = {version = "^8.6.1.post1", source = "nvidia"}
tensorrt-libs = {version = "^8.6.1", source = "nvidia"}
tensorrt-bindings = {version = "^8.6.1", source = "nvidia"}
scikit-learn = "^1.3.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"


[[tool.poetry.source]]
name = "nvidia"
url = "https://pypi.nvidia.com/"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
